--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,4 @@
-set -g base-index 1
+set -g base-index 2
 set -g panel-base-index 1
 set-window-option -g mode-keys vi
 
@@ -8,3 +8,8 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
+
+bind -r g select-window -t 1
+bind f select-window -t 2
+bind d select-window -t 3
+bind s select-window -t 4
