--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
 set -g base-index 2
-set -g panel-base-index 1
+# set -g panel-base-index 1
 set-window-option -g mode-keys vi
 
 # vim-like pane switching
@@ -13,3 +13,11 @@ bind -r g select-window -t 1
 bind f select-window -t 2
 bind d select-window -t 3
 bind s select-window -t 4
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
