--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,11 @@
-set -g base-index 2
+set -g base-index 1
 # set -g panel-base-index 1
 set-window-option -g mode-keys vi
+
+# Remap prefix to control-a
+unbind-key C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
 
 # vim-like pane switching
 bind -r ^ last-window
@@ -9,15 +14,8 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
-bind -r g select-window -t 1
+bind g select-window -t 1
 bind f select-window -t 2
 bind d select-window -t 3
 bind s select-window -t 4
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
