Experimental/new setup 2 (#1)
use init.vim

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,11 @@
 set -g base-index 1
-set -g panel-base-index 1
+# set -g panel-base-index 1
 set-window-option -g mode-keys vi
+
+# Remap prefix to control-a
+unbind-key C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
 
 # vim-like pane switching
 bind -r ^ last-window
@@ -8,3 +13,9 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
+
+bind g select-window -t 1
+bind f select-window -t 2
+bind d select-window -t 3
+bind s select-window -t 4
+
