--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,3 +19,16 @@ bind f select-window -t 2
 bind d select-window -t 3
 bind s select-window -t 4
 
+# turn mouse on
+set -g mouse on
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Theme
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @tmux-gruvbox 'dark' # or 'light'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
